--- a/backend/.env.example.json
+++ b/backend/.env.example.json
@@ -1,5 +1,8 @@
+########################################################
+#  EXAMPLE ENV FILE! VISIBLE! NO COMMITTING!
+
 # Database Configuration
-DB_HOST=postgres
+DB_HOST=localhost
 DB_NAME=demand_letters
 DB_USER=dev_user
 DB_PASSWORD=dev_password
