--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,10 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Serverless Framework
+.serverless/
+.serverless_plugins/
+*.zip
+layer/
+.python-requirements/
