--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard]>=0.24.0
 mangum>=0.17.0
 sqlalchemy>=2.0.23
 pydantic>=2.5.0
+pydantic-settings>=2.1.0
 python-dotenv>=1.0.0
 boto3>=1.29.7
 openai>=1.0.0
