--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ python-multipart>=0.0.6
 sqlalchemy>=2.0.23
 pydantic>=2.5.0
 pydantic-settings>=2.1.0
+email-validator>=2.0.0
 python-dotenv>=1.0.0
 boto3>=1.29.7
 openai>=1.0.0
